--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,17 @@
 {
-    "name": "docker_node_rest",
-    "version": "1.0.0",
-    "description": "Docker Webshop NodeJS Backend",
-    "author": "Furkan Karayel",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2"
-    }
+  "name": "docker_node_rest",
+  "version": "1.0.0",
+  "description": "Docker Webshop NodeJS Backend",
+  "author": "Furkan Karayel",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.8.0",
+    "pg-native": "^3.0.1",
+    "morgan": "^1.10.0"
+
   }
+}
