created register login and cart pinia working

--- a/vue/jsconfig.json
+++ b/vue/jsconfig.json
@@ -18,7 +18,8 @@
         "src/pages/*"
       ],
       "assets/*": [
-        "src/assets/*"
+        "src/assets/*",
+        "src/assets/images/*"
       ],
       "boot/*": [
         "src/boot/*"
