--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -4,38 +4,44 @@ services:
     image: postgres:10.0-alpine
     restart: always
     environment:
+      DB_HOST: postgres
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       POSTGRES_USER: ${POSTGRES_USER:-dbuser}
       POSTGRES_DB: ${POSTGRES_DB:-webshop}
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+      # copy the sql script to create tables
+      - ./db/webshop.sql:/docker-entrypoint-initdb.d/webshop.sql
+    networks:
+      - mynetwork
+  node:
+    image: node:alpine
+    platform: linux/arm64
+    restart: always
+    command:
+      - npm start
+      # - apt-get update && apt-get install -y nodejs
+      # - apt-get update && apt-get install -y python3
+      - npm install --silent
+      - node server.js
+    working_dir: /app
     logging:
       options:
         max-size: 10m
         max-file: "3"
     ports:
-      - "5434:5432"
+      - "8081:8081"
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
-      # copy the sql script to create tables
-      - ./db/webshop.sql:/docker-entrypoint-initdb.d/webshop.sql
-
-  # node:
-  #   image: ubuntu
-  #   platform: linux/arm64
-  #   restart: always
-  #   working_dir: /app
-  #   logging:
-  #     options:
-  #       max-size: 10m
-  #       max-file: "3"
-  #   ports:
-  #     - "8081:8081"
-  #   volumes:
-  #     - .:/app
-  #     - ./routes/:/app/routes
-  #     - ./controller/:/app/controller
-  #   entrypoint: ["/bin/bash", "-c"]
-  #   command:
-  #     - apt-get update && apt-get install -y nodejs
-  #     - apt-get update && apt-get install -y python3
-  #     - npm install --silent
-  #     - node server.js
+      - .:/app
+      - ./routes/:/app/routes
+      - ./controller/:/app/controller
+    entrypoint: ["/bin/sh", "-c"]
+    depends_on:
+      - postgres
+    networks:
+      - mynetwork
+networks:
+  mynetwork:
+    driver: bridge
