--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "pg-native": "^3.0.1",
-    "morgan": "^1.10.0"
-
+    "pg-promise": "^10.10.2"
   }
 }
